--- a/contact.html
+++ b/contact.html
@@ -29,15 +29,12 @@
     <div class="row">
       <div class="col-lg-6 col-md-4">
         <ul class="social_media style_none">
-          <li><a href="https://web.facebook.com/cleanclassyng/?_rdc=1&_rdr"><i class="fab fa-facebook-f" aria-hidden="true"></i></a></li>
-          <li><a href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
-          <li><a href="https://www.instagram.com/cleanclassyng/"><i class="fab fa-instagram" aria-hidden="true"></i></a></li>
-          <li><a href="#"><i class="fab fa-youtube" aria-hidden="true"></i></a></li>
+          
         </ul>
       </div>
       <div class="col-lg-6 col-md-8">
         <div class="top_right">
-          <div class="topbar_phone"><a href="#"><i class="fas fa-phone-alt" aria-hidden="true"></i> +234 805 173 0803 </a></div>
+          <div class="topbar_phone"><a href="tel:+2348051730803"><i class="fas fa-phone-alt" aria-hidden="true"></i> +234 805 173 0803 </a></div>
         </div>
       </div>
     </div>
@@ -76,6 +73,7 @@
               
               <li class="nav-item"><a class="nav-link" href="contact.html"> Contact Us</a></li>
             </ul>
+            <a class="btn btn-primary GetQuote" id="GetQuote" href="javascript:void(0);">Get Quote</a>
           </div>
         </nav>
       </div>
@@ -86,7 +84,7 @@
 <!--Inner Heading Start-->
 <div class="innerHeading">
   <div class="container">
-    <h1>Contact Us</h1>
+    <h1></h1>
   </div>
 </div>
 <!--Inner Heading End--> 
@@ -100,7 +98,7 @@
       <div class="col-md-4">
           <div class="card"> <img src="https://i.imgur.com/xuGJbnU.png" width="40">
               <h5>Office Address</h5>
-              <p>116 Lagos Road, Haruna-Ikorodu, Lagos, Nigeria</p>
+              <p>116 Lagos Road, Haruna, Lagos, Nigeria</p>
           </div>
       </div>
       <div class="col-md-4">
@@ -125,7 +123,7 @@
     <div class="getTouch">Get In Touch</div>
     <div class="row formcol">
       <div class="col-lg-8">
-        <form class="form mb-md50" id="contact-form" method="post" action="contact.php" novalidate="">
+        <form class="form mb-md50" id="contact-form" novalidate="">
           <div class="messages"></div>
           <div class="controls">
             <div class="row">
