--- a/laundry.html
+++ b/laundry.html
@@ -30,15 +30,12 @@
     <div class="row">
       <div class="col-lg-6 col-md-4">
         <ul class="social_media style_none">
-          <li><a href="https://web.facebook.com/cleanclassyng/?_rdc=1&_rdr"><i class="fab fa-facebook-f" aria-hidden="true"></i></a></li>
-          <li><a href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
-          <li><a href="https://www.instagram.com/cleanclassyng/"><i class="fab fa-instagram" aria-hidden="true"></i></a></li>
-          <li><a href="#"><i class="fab fa-youtube" aria-hidden="true"></i></a></li>
+          
         </ul>
       </div>
       <div class="col-lg-6 col-md-8">
         <div class="top_right">
-          <div class="topbar_phone"><a href="#"><i class="fas fa-phone-alt" aria-hidden="true"></i> +234 805 173 0803 </a></div>
+          <div class="topbar_phone"><a href="tel:+2348051730803"><i class="fas fa-phone-alt" aria-hidden="true"></i> +234 805 173 0803 </a></div>
         </div>
       </div>
     </div>
@@ -60,12 +57,13 @@
             <button class="close-toggler" type="button" data-toggle="offcanvas"> <span><i class="fas fa-times-circle" aria-hidden="true"></i></span> </button>
             <ul class="navbar-nav mr-auto">
               <li class="nav-item active"><a class="nav-link" href="index.html"> Home </a></li>
-              <li class="nav-item"><a class="nav-link" href="services.html"> Services <span class="caret"><i class="fas fa-caret-down"></i></span></a> <i class="fas fa-caret-down"></i>
+              <li class="nav-item"><a class="nav-link" href=""> Services <span class="caret"><i class="fas fa-caret-down"></i></span></a> <i class="fas fa-caret-down"></i>
                 <ul class="submenu">
                   <li><a href="commercial.html">Commercial Cleaning</a></li>
                   <li><a href="construction.htm">Post Construction Cleaning </a></li>
                   <li><a href="upholstery.html">Carpet, Sofa and Upholstery Cleaning</a></li>
                   <li><a href="tenacy.html">End of Tenancy </a></li>
+                  <li><a href="window.html">Window Cleaning</a></li>
                   <li><a href="pest.html">Pest Control</a></li>
                   <li><a href="laundry.html">Laundry and Dry-cleaning</a></li>
                 </ul>
@@ -77,6 +75,7 @@
               
               <li class="nav-item"><a class="nav-link" href="contact.html"> Contact Us</a></li>
             </ul>
+            <a class="btn btn-primary GetQuote" id="GetQuote" href="javascript:void(0);">Get Quote</a>
           </div>
         </nav>
       </div>
@@ -88,7 +87,7 @@
 <!--Inner Heading Start-->
 <div class="innerHeading">
     <div class="container">
-      <h1>Laundry and Dry-cleaning</h1>
+      <h1>looking clean and smart is good, doing this stress-free is even better.</h1>
     </div>
   </div>
   <!--Inner Heading End--> 
@@ -96,7 +95,7 @@
   <!--Inner Content Start-->
   <div class="innercontent">
   <div class="container">
-  
+
   <div class="about-wrap" id="about">
       <div class="row">
         <div class="col-lg-6">
@@ -109,7 +108,6 @@
             <div class="title">
               <h3>Laundry and Dry-cleaning</h3>
             </div>
-            <p>looking clean and smart is good, doing this stress-free is even better.</p>
             <p>Many methods of cleaning have rendered garments useless or less desirable because of the inappropriateness of these methods.
               <br> . While some clothing needs to be dry-cleaned, some others need to be laundered and this is where we pride ourselves on providing top-notch laundry and dry cleaning service.</p>
               <p>We employ proper, thorough and standardized processes in getting your clothes clean and fit to adorn. Our professional laundry and dry-cleaning services are built on innovation, technology, and years of experience. 
@@ -120,7 +118,7 @@
                   <br>Each process is customized and well suited for each type of clothing.</p>
               <p>There is no gainsaying that we handle every of your clothing in toxin-free solvents to prevent any possible damage to your clothing and ensure the highest quality of dry cleaning is always delivered.</p>
               <p>Our overall laundry and dry cleaning services cover:</p>
-              <ul class="bullet_icons">
+              <ul class="">
                 <li>Laundry</li>
                 <li>Steam press ironing</li>
                 <li>Garment repair</li>
@@ -141,9 +139,9 @@
 <div class="get-wrap">
   <div class="container">
     <div class="title">
-      <h1>Get in touch</h1>
+      <h1></h1>
     </div>
-    <p>•	You will be satisfied with every service you need</p>
+    <p>You will be satisfied with every service you need</p>
     <div class="callText">Call us! we are available 24/7</div>
     <div class="phonewrp"><a href="#">+234 805 173 0803</a></div>
   </div>
