--- a/pest.html
+++ b/pest.html
@@ -30,15 +30,12 @@
     <div class="row">
       <div class="col-lg-6 col-md-4">
         <ul class="social_media style_none">
-          <li><a href="https://web.facebook.com/cleanclassyng/?_rdc=1&_rdr"><i class="fab fa-facebook-f" aria-hidden="true"></i></a></li>
-          <li><a href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
-          <li><a href="https://www.instagram.com/cleanclassyng/"><i class="fab fa-instagram" aria-hidden="true"></i></a></li>
-          <li><a href="#"><i class="fab fa-youtube" aria-hidden="true"></i></a></li>
+          
         </ul>
       </div>
       <div class="col-lg-6 col-md-8">
         <div class="top_right">
-          <div class="topbar_phone"><a href="#"><i class="fas fa-phone-alt" aria-hidden="true"></i> +234 805 173 0803 </a></div>
+          <div class="topbar_phone"><a href="tel:+2348051730803"><i class="fas fa-phone-alt" aria-hidden="true"></i> +234 805 173 0803 </a></div>
         </div>
       </div>
     </div>
@@ -66,6 +63,7 @@
                   <li><a href="construction.htm">Post Construction Cleaning </a></li>
                   <li><a href="upholstery.html">Carpet, Sofa and Upholstery Cleaning</a></li>
                   <li><a href="tenacy.html">End of Tenancy </a></li>
+                  <li><a href="window.html">Window Cleaning</a></li>
                   <li><a href="pest.html">Pest Control</a></li>
                   <li><a href="laundry.html">Laundry and Dry-cleaning</a></li>
                 </ul>
@@ -77,6 +75,7 @@
               
               <li class="nav-item"><a class="nav-link" href="contact.html"> Contact Us</a></li>
             </ul>
+            <a class="btn btn-primary GetQuote" id="GetQuote" href="javascript:void(0);">Get Quote</a>
           </div>
         </nav>
       </div>
@@ -89,7 +88,7 @@
 <!--Inner Heading Start-->
 <div class="innerHeading">
   <div class="container">
-    <h1>Pest Control</h1>
+    <h1>Pest infestation shouldn't be one of your worries! <br>We are licensed and adequately equipped to help you get rid of all kinds of pest infestations.</h1>
   </div>
 </div>
 <!--Inner Heading End--> 
@@ -109,21 +108,20 @@
           <div class="title">
             <h3>Pest Control</h3>
           </div>
-          <p>Pest infestation shouldn't be one of your worries! We are licensed and adequately equipped to help you get rid of all kinds of pest infestations.</p>
           <p>Pest infestation is a very troublesome issue that can pose serious health risks to you and other people in pest infested areas.
             <br> Pest infestations also cause serious damage and deterioration to physical structures/properties</p>
             <p>Our professional approach to handling all pest infestations involves maintaining the standard quality and service obtainable and required in the industry.  
             <br>Our eco-friendly pest control solutions ensure that you and the environment are not exposed to harmful toxins and chemicals.</p>
             <p>We have the knowledge, expertise and equipment to eradicate pests from different kinds of vicinities. </p>
             <p>Our pest control services are carried out by our team of highly trained experts who through the following pest control processes efficiently annihilate the invasion of pests:</p>
-            <ul class="bullet_icons">
+            <ul class="">
                 <li>Integrated pest management</li>
                 <li>Fumigation</li>
                 <li>Deratisation</li>
                 <li>Roach control</li>
                 <li>Reptile control</li>
                 <li>Insect control (mosquito, ants, flies, termites, bed bugs)</li>
-            <p>Consult us here to experience our industry-leading pest control services that protect you from pests and associated health risks.</p>
+            <p>Consult us <a href="contact.html">here</a> to experience our industry-leading pest control services that protect you from pests and associated health risks.</p>
               </ul>
             </div>
         </div>
@@ -140,9 +138,9 @@
 <div class="get-wrap">
   <div class="container">
     <div class="title">
-      <h1>Get in touch</h1>
+      <h1></h1>
     </div>
-    <p>•	You will be satisfied with every service you need</p>
+    <p>You will be satisfied with every service you need</p>
     <div class="callText">Call us! we are available 24/7</div>
     <div class="phonewrp"><a href="#">+234 805 173 0803</a></div>
   </div>
@@ -187,12 +185,13 @@
             <h3 class="title">Services</h3>
             <ul>
               <li><a href="#."> Cleaning Services</a> </li>
-<li><a href="commercial.html">commercial cleaning</a> </li>
-<li><a href="construction.htm">Post Construction cleaning</a> </li>
-<li><a href="upholstery.html">Carpet, Sofa and Upholstery Cleaning</a> </li>
-<li><a href="tenacy.html">End of Tenancy </a> </li>
-<li><a href="pest.html">Pest Control </a> </li>
-<li><a href="laundry.html">Laundry and Dry-cleaning </a> </li>
+              <li><a href="commercial.html">commercial cleaning</a> </li>
+              <li><a href="construction.htm">Post Construction cleaning</a> </li>
+              <li><a href="upholstery.html">Carpet, Sofa and Upholstery Cleaning</a> </li>
+              <li><a href="tenacy.html">End of Tenancy </a> </li>
+              <li><a href="window.html">Window Cleaning</a> </li>
+              <li><a href="pest.html">Pest Control </a> </li>
+              <li><a href="laundry.html">Laundry and Dry-cleaning </a> </li>
             </ul>
           </div>
         </div>
@@ -201,7 +200,6 @@
             <h3 class="title">Quick links</h3>
             <ul>
               <li><a href="index.html"> Home</a> </li>
-              <li><a href="services.html"> services</a> </li>
               <li><a href="about.html"> About Us</a> </li>
               <li><a href="gallery.html"> Gallery</a> </li>
               <li><a href="blog.html"> Blog</a> </li>
