--- a/about.html
+++ b/about.html
@@ -29,15 +29,12 @@
     <div class="row">
       <div class="col-lg-6 col-md-4">
         <ul class="social_media style_none">
-          <li><a href="https://web.facebook.com/cleanclassyng/?_rdc=1&_rdr"><i class="fab fa-facebook-f" aria-hidden="true"></i></a></li>
-          <li><a href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
-          <li><a href="https://www.instagram.com/cleanclassyng/"><i class="fab fa-instagram" aria-hidden="true"></i></a></li>
-          <li><a href="#"><i class="fab fa-youtube" aria-hidden="true"></i></a></li>
+         
         </ul>
       </div>
       <div class="col-lg-6 col-md-8">
         <div class="top_right">
-          <div class="topbar_phone"><a href="#"><i class="fas fa-phone-alt" aria-hidden="true"></i> +234 805 173 0803 </a></div>
+          <div class="topbar_phone"><a  href="tel:+2348051730803"><i class="fas fa-phone-alt" aria-hidden="true"></i> +234 805 173 0803 </a></div>
         </div>
       </div>
     </div>
@@ -59,12 +56,13 @@
             <button class="close-toggler" type="button" data-toggle="offcanvas"> <span><i class="fas fa-times-circle" aria-hidden="true"></i></span> </button>
             <ul class="navbar-nav mr-auto">
               <li class="nav-item active"><a class="nav-link" href="index.html"> Home </a></li>
-              <li class="nav-item"><a class="nav-link" href="services.html"> Services <span class="caret"><i class="fas fa-caret-down"></i></span></a> <i class="fas fa-caret-down"></i>
+              <li class="nav-item"><a class="nav-link" href=""> Services <span class="caret"><i class="fas fa-caret-down"></i></span></a> <i class="fas fa-caret-down"></i>
                 <ul class="submenu">
                   <li><a href="commercial.html">Commercial Cleaning</a></li>
                   <li><a href="construction.htm">Post Construction Cleaning </a></li>
                   <li><a href="upholstery.html">Carpet, Sofa and Upholstery Cleaning</a></li>
                   <li><a href="tenacy.html">End of Tenancy </a></li>
+                  <li><a href="window.html">Window Cleaning </a></li>
                   <li><a href="pest.html">Pest Control</a></li>
                   <li><a href="laundry.html">Laundry and Dry-cleaning</a></li>
                 </ul>
@@ -76,6 +74,7 @@
               
               <li class="nav-item"><a class="nav-link" href="contact.html"> Contact Us</a></li>
             </ul>
+            <a class="btn btn-primary GetQuote" id="GetQuote" href="javascript:void(0);">Get Quote</a>
           </div>
         </nav>
       </div>
@@ -87,7 +86,7 @@
 <!--Inner Heading Start-->
 <div class="innerHeading">
   <div class="container">
-    <h1>About Us</h1>
+    <h1></h1>
   </div>
 </div>
 <!--Inner Heading End--> 
@@ -122,7 +121,7 @@
                 <div class="title">
                   <h3>Core values</h3></div>
                 <p>At the heart of our business operations, we hold these values dear:</p>
-              <ul class="bullet_icons">
+              <ul class="">
               <li>Teamwork</li>
               <li>Integrity</li>
               <li>Innovation</li>
@@ -145,9 +144,9 @@
 <div class="get-wrap">
   <div class="container">
     <div class="title">
-      <h1>Get in touch</h1>
+      <h1></h1>
     </div>
-    <p>•	You will be satisfied with every service you need</p>
+    <p>You will be satisfied with every service you need</p>
     <div class="callText">Call us! we are available 24/7</div>
     <div class="phonewrp"><a href="#">+234 805 173 0803</a></div>
   </div>
@@ -196,6 +195,7 @@
 <li><a href="construction.htm">Post Construction cleaning</a> </li>
 <li><a href="upholstery.html">Carpet, Sofa and Upholstery Cleaning</a> </li>
 <li><a href="tenacy.html">End of Tenancy </a> </li>
+<li><a href="window.html">Window Cleaning</a></li>
 <li><a href="pest.html">Pest Control </a> </li>
 <li><a href="laundry.html">Laundry and Dry-cleaning </a> </li>
             </ul>
