--- a/commercial.html
+++ b/commercial.html
@@ -30,15 +30,12 @@
     <div class="row">
       <div class="col-lg-6 col-md-4">
         <ul class="social_media style_none">
-          <li><a href="https://web.facebook.com/cleanclassyng/?_rdc=1&_rdr"><i class="fab fa-facebook-f" aria-hidden="true"></i></a></li>
-          <li><a href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
-          <li><a href="#"><i class="fab fa-instagram" aria-hidden="true"></i></a></li>
-          <li><a href="#"><i class="fab fa-youtube" aria-hidden="true"></i></a></li>
+          
         </ul>
       </div>
       <div class="col-lg-6 col-md-8">
         <div class="top_right">
-          <div class="topbar_phone"><a href="#"><i class="fas fa-phone-alt" aria-hidden="true"></i> +234 805 173 0803 </a></div>
+          <div class="topbar_phone"><a href="tel:+2348051730803"><i class="fas fa-phone-alt" aria-hidden="true"></i> +234 805 173 0803 </a></div>
         </div>
       </div>
     </div>
@@ -60,12 +57,13 @@
             <button class="close-toggler" type="button" data-toggle="offcanvas"> <span><i class="fas fa-times-circle" aria-hidden="true"></i></span> </button>
             <ul class="navbar-nav mr-auto">
               <li class="nav-item active"><a class="nav-link" href="index.html"> Home </a></li>
-              <li class="nav-item"><a class="nav-link" href="services.html"> Services <span class="caret"><i class="fas fa-caret-down"></i></span></a> <i class="fas fa-caret-down"></i>
+              <li class="nav-item"><a class="nav-link" href=""> Services <span class="caret"><i class="fas fa-caret-down"></i></span></a> <i class="fas fa-caret-down"></i>
                 <ul class="submenu">
                   <li><a href="commercial.html">Commercial Cleaning</a></li>
                   <li><a href="construction.htm">Post Construction Cleaning </a></li>
                   <li><a href="upholstery.html">Carpet, Sofa and Upholstery Cleaning</a></li>
                   <li><a href="tenacy.html">End of Tenancy </a></li>
+                  <li><a href="window.html">Window Cleaning</a></li>
                   <li><a href="pest.html">Pest Control</a></li>
                   <li><a href="laundry.html">Laundry and Dry-cleaning</a></li>
                 </ul>
@@ -77,6 +75,7 @@
               
               <li class="nav-item"><a class="nav-link" href="contact.html"> Contact Us</a></li>
             </ul>
+            <a class="btn btn-primary GetQuote" id="GetQuote" href="javascript:void(0);">Get Quote</a>
           </div>
         </nav>
       </div>
@@ -88,7 +87,7 @@
 <!--Inner Heading Start-->
 <div class="innerHeading">
   <div class="container">
-    <h1>Commercial Cleaning</h1>
+    <h1>Clean environment is a safe one and we make sure of it.</h1>
   </div>
 </div>
 <!--Inner Heading End--> 
@@ -101,14 +100,12 @@
     <div class="row">
       <div class="col-lg-6">
         <div class="aboutImg"><img src="images/pestcontrol/pest6.jpg" alt=""></div>
-        <div class="aboutImg"><img src="images/pestcontrol/commercial1.jpg" alt=""></div>
       </div>
       <div class="col-lg-6">
         <div class="about_box">
           <div class="title">
             <h3>Commercial Cleaning</h3>
           </div>
-          <p>Clean environment is a safe one and we make sure of it.</p>
           <p>Office and Residential Cleaning – The work and living environments are important space in our everyday life that needs to be kept clean and safe.
             <br> A clean and safe environment facilitates good living and work condition.</p>
             <p>One thing the outbreak of the COVID-19 pandemic in 2020 has taught everyone is that the health and safety of people are directly tied to the cleanliness/sanitization and safety of our environment. 
@@ -129,9 +126,8 @@
 <div class="get-wrap">
   <div class="container">
     <div class="title">
-      <h1>Get in touch</h1>
     </div>
-    <p>•	You will be satisfied with every service you need</p>
+    <p>You will be satisfied with every service you need</p>
     <div class="callText">Call us! we are available 24/7</div>
     <div class="phonewrp"><a href="#">+234 805 173 0803</a></div>
   </div>
@@ -176,12 +172,13 @@
             <h3 class="title">Services</h3>
             <ul>
               <li><a href="#."> Cleaning Services</a> </li>
-<li><a href="commercial.html">commercial cleaning</a> </li>
-<li><a href="construction.htm">Post Construction cleaning</a> </li>
-<li><a href="upholstery.html">Carpet, Sofa and Upholstery Cleaning</a> </li>
-<li><a href="tenacy.html">End of Tenancy </a> </li>
-<li><a href="pest.html">Pest Control </a> </li>
-<li><a href="laundry.html">Laundry and Dry-cleaning </a> </li>
+              <li><a href="commercial.html">commercial cleaning</a> </li>
+              <li><a href="construction.htm">Post Construction cleaning</a> </li>
+              <li><a href="upholstery.html">Carpet, Sofa and Upholstery Cleaning</a> </li>
+              <li><a href="tenacy.html">End of Tenancy </a> </li>
+              <li><a href="window.html">Window Cleaning</a> </li>
+              <li><a href="pest.html">Pest Control </a> </li>
+              <li><a href="laundry.html">Laundry and Dry-cleaning </a> </li>
             </ul>
           </div>
         </div>
@@ -190,7 +187,7 @@
             <h3 class="title">Quick links</h3>
             <ul>
               <li><a href="index.html"> Home</a> </li>
-              <li><a href="services.html"> services</a> </li>
+
               <li><a href="about.html"> About Us</a> </li>
               <li><a href="gallery.html"> Gallery</a> </li>
               <li><a href="blog.html"> Blog</a> </li>
