--- a/blog.html
+++ b/blog.html
@@ -66,7 +66,7 @@
               <li class="nav-item active"><a class="nav-link" href="about.html"> About Us </a></li>
               <li class="nav-item active"><a class="nav-link" href="gallery.html"> Gallery </a></li>
               </li>
-              <li class="nav-item"><a class="nav-link" href="blog.html"> Blog</a></li>
+              <li class="nav-item"><a class="nav-link" href="pricing.html"> Pricing</a></li>
               
               <li class="nav-item"><a class="nav-link" href="contact.html"> Contact Us</a></li>
             </ul>
