--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
       <li data-slotamount="7" data-transition="slotzoom-horizontal" data-masterspeed="1000" data-saveperformance="on"> <img alt="" alt="" src="images/dummy.png" data-lazyload="images/pestcontrol/pest9.png">
         <div class="caption lft large-title tp-resizeme slidertext_hover" data-x="left" data-y="180" data-speed="600" data-start="1600">Welcome to Clean N Classy</div>
         <div class="caption lft large-title tp-resizeme slidertext2" data-x="left" data-y="190" data-speed="600" data-start="2200">Commercial Cleaning</div>
-        <div class="caption lfb large-title tp-resizeme slidertext3" data-x="left" data-y="310" data-speed="600" data-start="2800">You come first always, we are ready to attend to your needs with detailed attention and professionalism.<br/> 
-          You have found your one-stop place for all your laundry and dry-cleaning needs, we got you covered.</div>
+        <div class="caption lfb large-title tp-resizeme slidertext3" data-x="left" data-y="310" data-speed="600" data-start="2800">You come first always, we are ready to attend to your needs with detailed attention<br/> and professionalism.
+          You have found your one-stop place for all your laundry and dry-cleaning needs,<br/> we got you covered.</div>
         <div class="caption lfb large-title tp-resizeme slidertext4 slider_btn" data-x="left" data-y="400" data-speed="600" data-start="3500"><a href="commercial.html">Learn More </a></div>
         <div class="caption lfb large-title tp-resizeme slidertext4" data-x="240" data-y="400" data-speed="600" data-start="4100"><a href="contact.html">Contact Us </a></div>
       </li>
@@ -108,7 +108,7 @@
       <li data-slotamount="7" data-transition="slotzoom-horizontal" data-masterspeed="1000" data-saveperformance="on"> <img alt="" alt="" src="images/dummy.png" data-lazyload="images/pestcontrol/footer7.jpg">
         <div class="caption lft large-title tp-resizeme slidertext_hover" data-x="left" data-y="180" data-speed="600" data-start="1600">Welcome to Clean N Cleaning</div>
         <div class="caption lft large-title tp-resizeme slidertext2" data-x="left" data-y="190" data-speed="600" data-start="2200">Pest Control</div>
-        <div class="caption lfb large-title tp-resizeme slidertext3" data-x="left" data-y="310" data-speed="600" data-start="2800">We are committed to keeping you happy/satisfied with our all-round cleaning and pest control services.<br/></div>
+        <div class="caption lfb large-title tp-resizeme slidertext3" data-x="left" data-y="310" data-speed="600" data-start="2800">We are committed to keeping you happy/satisfied with our all-round cleaning and<br/> pest control services.</div>
         <div class="caption lfb large-title tp-resizeme slidertext4 slider_btn" data-x="left" data-y="400" data-speed="600" data-start="3500"><a href="pest.html">Learn More </a></div>
         <div class="caption lfb large-title tp-resizeme slidertext4" data-x="240" data-y="400" data-speed="600" data-start="4100"><a href="contact.html">Contact Us </a></div>
       </li>
@@ -116,7 +116,7 @@
       <li data-slotamount="7" data-transition="slotzoom-horizontal" data-masterspeed="1000" data-saveperformance="on"> <img alt="" alt="" src="images/dummy.png" data-lazyload="images/pestcontrol/Sofa.jpg">
         <div class="caption lft large-title tp-resizeme slidertext_hover" data-x="left" data-y="180" data-speed="600" data-start="1600">Welcome to Clean N Classy</div>
         <div class="caption lft large-title tp-resizeme slidertext2" data-x="left" data-y="190" data-speed="600" data-start="2200">Carpet, Sofa and Upholstery</div>
-        <div class="caption lfb large-title tp-resizeme slidertext3" data-x="left" data-y="310" data-speed="600" data-start="2800">Innovation is imbued in our processes. Enjoy hassle-free cleaning,<br> laundry and pest control services suited for you.<br/></div>
+        <div class="caption lfb large-title tp-resizeme slidertext3" data-x="left" data-y="310" data-speed="600" data-start="2800">Innovation is imbued in our processes.Enjoy hassle-free cleaning,<br> laundry and pest control services suited for you.<br/></div>
         <div class="caption lfb large-title tp-resizeme slidertext4 slider_btn" data-x="left" data-y="400" data-speed="600" data-start="3500"><a href="upholstery.html">Learn More </a></div>
         <div class="caption lfb large-title tp-resizeme slidertext4" data-x="240" data-y="400" data-speed="600" data-start="4100"><a href="contact.html">Contact Us </a></div>
       </li>
