--- a/laundry.html
+++ b/laundry.html
@@ -20,6 +20,11 @@
 <link rel="stylesheet" type="text/css" href="css/jquery.fancybox.min.css" media="screen" />
 <link rel="stylesheet" href="rs-plugin/css/settings.css">
 <link href="css/style.css" rel="stylesheet">
+<style>
+  ol{
+    list-style: square;
+  }
+</style>
 <title>Clean N Classy</title>
 </head>
 <body>
@@ -108,22 +113,23 @@
             <div class="title">
               <h3>Laundry and Dry-cleaning</h3>
             </div>
-            <p>Many methods of cleaning have rendered garments useless or less desirable because of the inappropriateness of these methods.
-              <br> . While some clothing needs to be dry-cleaned, some others need to be laundered and this is where we pride ourselves on providing top-notch laundry and dry cleaning service.</p>
+            <p>Many methods of cleaning have rendered garments useless or less desirable because of the inappropriateness of these methods, 
+              <br>While some clothing needs to be dry-cleaned, some others need to be laundered and this is where we pride ourselves on providing top-notch laundry and dry cleaning service.</p>
               <p>We employ proper, thorough and standardized processes in getting your clothes clean and fit to adorn. Our professional laundry and dry-cleaning services are built on innovation, technology, and years of experience. 
               <br>We ensure your clothing is taken care of at the highest level of care and our processes meet the highest verifiable standard in the industry. </p>
               <p>All clothing in our care are dealt with by our well-trained and experienced dry cleaning experts.
               <br>You need not worry about misplaced, damaged or mishandled clothing as our standard processes guide against such issues.</p>
               <p>Our unique approach starts with a detailed inspection of every clothing collected and proper sorting of each clothing before going through the dry-cleaning process. 
-                  <br>Each process is customized and well suited for each type of clothing.</p>
+                  Each process is customized and well suited for each type of clothing.</p>
               <p>There is no gainsaying that we handle every of your clothing in toxin-free solvents to prevent any possible damage to your clothing and ensure the highest quality of dry cleaning is always delivered.</p>
               <p>Our overall laundry and dry cleaning services cover:</p>
-              <ul class="">
+              <ol>
                 <li>Laundry</li>
                 <li>Steam press ironing</li>
                 <li>Garment repair</li>
                 <li>Stain removal</li>
                 <li>Special garments (wedding dresses, customized clothing etc.)</li>
+              </ol>
               </div>
           </div>
         </div>
