--- a/tenacy.html
+++ b/tenacy.html
@@ -109,9 +109,9 @@
           <p>Even the best of tenants may leave residential or commercial properties in an unappealing state and meet disapproval from potential new occupants. </p>
           <p>So whether you own a property or chain of building properties our end of tenancy service assures that your property is clean and visually appealing for your next tenants. 
             <br>This also sets good precedence and standard for new tenants to maintain during the duration of their contract lease.</p>
-            <p>A mirror serves as a physical reflection of yourself. So also, windows in residential, office and commercial buildings can be a reflection of an impression you desire to create.  
+            <!--<p>A mirror serves as a physical reflection of yourself. So also, windows in residential, office and commercial buildings can be a reflection of an impression you desire to create.  
             <br>Clean windows project a good first impression always and helps portray the desired image for you and your property.  </p>
-            <p>We understand all these and the importance of seemingly insignificant things. Our team of specialists are efficient in ensuring windows are sparkling irrespective of the height or size of the building.</p>
+            <p>We understand all these and the importance of seemingly insignificant things. Our team of specialists are efficient in ensuring windows are sparkling irrespective of the height or size of the building.</p>-->
             </div>
         </div>
       </div>
