--- a/upholstery.html
+++ b/upholstery.html
@@ -107,11 +107,11 @@
           <div class="title">
             <h3>Carpet, Sofa and Upholstery Cleaning</h3>
           </div>
-          <p>Household items like carpets, sofa and upholstery are not easily moved from place to place and cannot be handled by a washing machine for a quick was either.</p>
+          <p>Household items like carpets, sofa and upholstery are not easily moved from place to place and cannot be handled by a washing machine for a quick wash either.</p>
           <p>Regardless, it is necessary to keep these items clean always. These items are easy hideouts for pests like bed bugs, mites etc.
-            <br> Carpets, sofas and upholsteries easily attract stains from food, dust, chemicals etc. And these stairs are not easily removed except through specialized techniques. </p>
+            <br> Carpets, sofas and upholsteries easily attract stains from food, dust, chemicals etc. And these stains are not easily removed except through specialized techniques. </p>
             <p>The stains and ragged outlook of these household items render them almost useless and will incur more cost to replace them. The good thing is that you do not need to 
-                <br>spend so much money replacing these items because we have customized solutions for every type of carpet, sofa and upholstery.</p>
+                spend so much money replacing these items because we have customized solutions for every type of carpet, sofa and upholstery.</p>
             <p>Our specialized service solutions help to extend the life of these furnishings as well as project the image you want for your space. 
                 <br>You wouldn't know the beauty and vibrancy these furnishings still hold until you have them cleaned and repurposed for use.</p>
             </div>
